--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,7 @@ remote_theme: jekyll/minima
 
 plugins:
  - jekyll-feed
+ - jekyll-remote-theme
  - jekyll-seo-tag
  - jekyll-paginate
  - jekyll-sitemap
