Update contact email

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Bruno
 author:
   name: Bruno
-  email: 2yw6tl2g@anonaddy.me 
+  email: 20u3zfyy@anonaddy.me 
 description: > # this means to ignore newlines until "show_excerpts:"
   Mauritian Londoner.
 # baseurl: ""
